# metal-cpp-cmake

./: .gitignore  CMakeLists.txt
GLM/: CMakeLists.txt
Lib/: CMakeLists.txt
Lib/SharedCodeLib/: App.cpp  App.h  AutoReleasePool.h  GLM.h  Graphics.h  Helpers.h  Lib.h  Models.cpp  Models.h  Renderer.cpp  Renderer.h  ViewDelegate.cpp  ViewDelegate.h
TinyObjLoader/: CMakeLists.txt
src/: CMakeLists.txt
src/00-window/: 00-window.cpp  CMakeLists.txt
src/01-primitive/: 01-primitive.cpp  CMakeLists.txt  Shader.h
src/01-primitive/Shaders/: Shaders.metal
src/02-argbuffers/: 02-argbuffers.cpp  CMakeLists.txt  Shader.h
src/06-lighting/: 06-lighting.cpp
src/learn-metal/00-window/: 00-window.cpp
